--- a/package.json
+++ b/package.json
@@ -5,11 +5,21 @@
   "main": "index.html",
   "scripts": {
     "dev": "vite",
+    "watch": " npx tailwindcss -i src/index.css -o ./dist/output.css --watch",
     "build": "vite build",
     "preview": "vite preview"
   },
   "devDependencies": {
-    "vite": "^5.0.0"
+    "tailwindcss": "4.0.0",
+    "vite": "^6.0.11"
+  },
+  "dependencies": {
+    "@tailwindcss/postcss": "^4.0.0",
+    "@tailwindcss/vite": "^4.0.0",
+    "autoprefixer": "^10.4.20",
+    "flowbite": "^3.1.2",
+    "postcss": "^8.5.1",
+    "zod": "^3.24.2"
   },
   "keywords": ["website", "portfolio", "minimalistic", "design"],
   "author": "Ten Point Hare",
